gh-pages deploy

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
+
+@import './app/app.component.scss';
+// PAGES
+@import './app/pages/contact-page/contact-page.component.scss';
+
+// CMPS
+@import './app/components/header/header.component';
+@import './app/components/contact-filter/contact-filter.component.scss';
